--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  margin: 0px;
+  padding: 0px;
+  background: linear-gradient(to bottom,rgb(200, 243, 243)25%, rgb(240, 163, 191)60%, rgb(255, 251, 251));
+  height: 95vh;   
+
+}
+.headp{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-shadow:4px 2px 6px  rgb(21, 249, 233) ;
+  margin-top: 35px;
+}
+.btnp{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
+  margin-top: 48px;
+
+}
+.btn{
+  height: 60px;
+  width: 280px;
+  border-radius: 30px ;
+  background-color: rgb(141, 179, 179);
+
+}
+:hover.btn{
+  background-color: aquamarine;
+}
+.hide{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 100px;
+  gap: 50px;
+
+}
+.classParent{
+  width: 460px;
+  background-color: rgb(202, 155, 248);
+  border: 4px solid black;
+  border-radius: 30px;
+  text-align: center;
+  padding: 50px 30px;
+  line-height: 35px;
+
+
+}
+.FuncParent{
+  width: 460px;
+  background-color:aquamarine;
+  border: 4px solid black;
+  border-radius: 30px;
+  text-align: center;
+  padding: 50px 30px;
+  line-height: 35px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media screen and (max-width: 660px) {
+
+  .headp {
+    font-size: 20px;
+  }
+  .btn{
+    width: 200px;
+  }
+
 }
